	pat3540779 - Parallel make Makefile.in race condition (pb)
	pat2972369 - link timeout in UDP mode (Eugene Berdnikov - deb339364)
 	             Minor fixes in lfd_lzo.c to ensure correct type casting
 	             Add description of "keepalive timeout:count;" syntax
	              to man page and vtund.conf sample.
 	             Remove doubled if(send_a_file){...} block in linkfd.c.
	
3.0.2:
	rfe1685781 - vtun3 client should parse vtun2 server encr directives (hch)
	rfe1744575 - cfg_file.y bugs (mf)
	rfe1738167 - build on c5 still fails (bc)

3.0.1:
	rfe1602625 - fix build for lzo2 (bc,db,ruzsi)
	rfe780607 - new debian rc scripts (surgo)
	
3.0.0:
	Configure looks for liblzo2 when available. (bc)
	
3.0.0-pre2:
	obsoleted linux/tap_dev (mjt)
	fixed Bug#1062819 - multi killold parsing bug (dpf)	
	changed rpm macros to support '--with socks' syntax (bc)
	changed rpm macros to support '--without lzo' syntax (bc)
	reworked rpm macro matrix for various distros (bc)
	started on UNSUPPORTED rpmbuild option (bc)
	Fixed Bug#1176343 SIGINT kills foreground server process (bc)
	Added RFE#936523 Bind VTun Server to Specific Interface (bc)
	Completely Rewrote the Bind To Specific Interface (alan grow)
	
3.0.0-pre1:
	Implementation of Nickolai 'kolya' Zeldovich's mlockall() patch	(bc)
	Some cleanup with respect to SSL on Apple (dpf)
	Added upper time bound to packet-based resync to reduce resync
	delay (dpf)
	Added xinetd prototype file for vtund (bc)
	added missing --with-blowfish-headers=DIR option (Daniel Macks)
	
3.0.0-pre0:
	Added multiple cipher support. (dpf)
	Added multiple cipher modes support. (dpf)
	Added support for different sized keys. (dpf)
	Re-sync ciphers when using non-ECB modes over a UDP
	connection. (dpf)
	Fixed Bug#908824 (persist=keep not re-applying routes) (dpf)

ver 2.6:
	No changes;  just renumber.
	
ver 2.5.3:
	$DESTDIR in makefile for packaging glee (PLD)
	Tighter code in generic/pty_dev.c where available (PLD)