@@ -219,6 +219,7 @@ struct vtun_opts {
    struct vtun_addr bind_addr;	 /* Server should listen on this address */
    int  svr_type;	 /* Server mode */
    int  syslog; 	 /* Facility to log messages to syslog under */
+   int  quiet;		 /* Be quiet about common errors */
 };
 #define VTUN_STAND_ALONE	0 
 #define VTUN_INETD		1	
